fixed alignment issue occurring on some devices

--- a/nova.css
+++ b/nova.css
@@ -2,7 +2,7 @@
  * Please do not redistribute without permission.
  * Thank you, and enjoy!
  *
- * VERSION: 4.8
+ * VERSION: 5.11
  *
  */
 
@@ -157,6 +157,10 @@ li.channel.channel-text.selected {
     border: none;
 }
 
+#voice-connection .btn-group {
+    margin-right: 15px;
+}
+
 /*Friends*/
 .icon-friends {
 	background-color: rgba(0,0,0,0.35) !important;
@@ -181,6 +185,10 @@ li.channel.channel-text.selected {
 .account {
     border-top: none;
     margin-left: 15px;
+}
+
+.account .btn-group {
+    margin-right: 10px;
 }
 
 .status {
